Request headers in client.HttpRequest, bug in contentType parsing, base64 < 1.8